# playstore-app-data

./: .flake8  .pre-commit-config.yaml  LICENSE  Makefile  README.md  pre-commit.sh  pyproject.toml  requirements.txt  wsgi.py
main/: __init__.py  app.py  config.py  scrapper.py
main/deploy/: __init__.py  routes.py  utils.py
main/scrapper/: __init__.py  routes.py  utils.py
