[tool.poetry]
name = "ps-app-version"
version = "0.1.0"
description = "API to get current version of app in playstore"
authors = ["Naman Tamrakar <namantam1@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
Flask = "^2.0.2"
beautifulsoup4 = "^4.10.0"
gunicorn = "^20.1.0"
requests = "^2.26.0"
Flask-Caching = "^1.10.1"
GitPython = "^3.1.24"

[tool.poetry.dev-dependencies]
black = { version = "^21.9b0", allow-prereleases = true }

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


# taken from poetry repository
[tool.black]
line-length = 88
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | tests/.*/setup.py
)/
'''
